--- a/it_sint/index.html
+++ b/it_sint/index.html
@@ -141,7 +141,7 @@
         <h4>Заполнить характеристики резервуара</h4>
         <div class="poly-style">
         <div class="flex wrap">
-            <div style="width: 100%">
+            <div>
                 <select class="color-default select-custom" name="LOAD_TYPE_HAR" id="LOAD_TYPE_HAR" onchange="this.className = this.value == 0 ? 'color-default' : 'color-blue';" >
                     <option class="color-default" value="" selected disabled>Назначение резервуара</option>
                     <option  class="color-blue" value="22">Отопление и ГВС</option>
