--- a/it_sint/index.html
+++ b/it_sint/index.html
@@ -122,7 +122,7 @@
                         <input id="EMAIL" value=""name="EMAIL" type="email" required >
                         <label id="EMAIL-L" for="EMAIL">E-mail:<span>*</span></label>
                     </div>
-                    <div><a class="button1 button-load" href="/upload/medialibrary/Opros_list_kotelnaya.doc">Скачать<br>опросный лист</a></div>
+                    <div class="load-desc"><a class="button1 button-load" href="/upload/medialibrary/Opros_list_kotelnaya.doc">Скачать<br>опросный лист</a></div>
                     <div class="poly-style form-adaptive">
                         <input id="PHONE" value=""name="PHONE" type="text"  required >
                         <label id="PHONE-L" class="label-correct" for="PHONE">Контактный телефон:  <span>(с указанием кода города)*</span></label>
@@ -134,6 +134,7 @@
                     <div><label class="custom-file-upload">
                         <input type="file"/>
                          <div class="top-info__button">Загрузить<br>опросный лист</div>
+                         <!-- <div class="load-mob"><a class="button1 button-load" href="/upload/medialibrary/Opros_list_kotelnaya.doc">Скачать<br>опросный лист</a></div> -->
                     </label>
                     </div>
 
