--- a/man1/index.html
+++ b/man1/index.html
@@ -49,7 +49,7 @@
                                     <li class="menu-sub"><a href="#">Финансирование</a></li>
                             </ul></li>
                         <li class="menu-sub sub-menu3"><a href="#">MAN XLION</a>
-                            <ul class="sub-menu-3 sub-menu-31">
+                            <ul class="sub-menu-3 sub-menu-31 to-top2">
                                     <h4>MAN XLION</h4>
                                     <li class="menu-sub"><a href="#">Обзор</a></li>
                                     <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -73,7 +73,7 @@
                         </ul>
                     </li>
                     <li class="menu-sub sub-menu3"><a href="#">TGS</a>
-                        <ul class="sub-menu-3">
+                        <ul class="sub-menu-3 bus-to-top">
                                 <h4>TGS</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -82,7 +82,7 @@
                         </ul>
                     </li>
                     <li class="menu-sub sub-menu3"><a href="#">TGM</a>
-                        <ul class="sub-menu-3 sub-to-top1">
+                        <ul class="sub-menu-3 sub-to-top1 to-top2">
                                 <h4>TGM</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -91,7 +91,7 @@
                         </ul>
                     </li>
                     <li class="menu-sub sub-menu3"><a href="#">TGL</a>
-                        <ul class="sub-menu-3 sub-to-top2">
+                        <ul class="sub-menu-3 sub-to-top2 to-top2">
                                 <h4>TGL</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -100,7 +100,7 @@
                         </ul>
                     </li>
                     <li class="menu-sub sub-menu3"><a href="#">TGS WW</a>
-                        <ul class="sub-menu-3 sub-to-top3">
+                        <ul class="sub-menu-3 sub-to-top3 to-top2">
                                 <h4>TGS WW</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
