--- a/it_sint/index.html
+++ b/it_sint/index.html
@@ -97,7 +97,7 @@
            <div class="swiper-slide"><img src="img/71.jpeg" width="380" height="215" alt=""></div>
            <div class="swiper-slide"><img src="img/72.jpeg" width="380" height="215" alt=""></div>
            <div class="swiper-slide"><img src="img/73.jpeg" width="380" height="215" alt=""></div>
-           <div class="swiper-slide"><img src="img/71.jpeg" width="380" height="215" alt=""></div>
+           <div class="swiper-slide"><img src="img/6.png" width="380" height="215" alt=""></div>
         </div>
         <div style="left: 500px" class="swiper-pagination style-pagination"></div>
         </div>
