--- a/it_sint/index.html
+++ b/it_sint/index.html
@@ -93,7 +93,7 @@
         <div class="wrapper-content">
            <h3 class="al-cent">Галерея</h3>
            <div class="swiper-container">
-           <div class="flex flex-between swiper-wrapper">
+           <div class="swiper-wrapper">
            <div class="swiper-slide"><img src="img/71.jpeg" width="380" height="215" alt=""></div>
            <div class="swiper-slide"><img src="img/72.jpeg" width="380" height="215" alt=""></div>
            <div class="swiper-slide"><img src="img/73.jpeg" width="380" height="215" alt=""></div>
