--- a/menu-man-master/index.html
+++ b/menu-man-master/index.html
@@ -28,10 +28,10 @@
                         <ul class="sub-menu">
                             <h4>Модельный ряд</h4>
                             <li>Техника в наличии</li>
-                            <li class="sub-menu3" data-id="level2"><a href="#">Магистральные перевозки</a>
+                            <li style="position: static" class="sub-menu3" data-id="level2"><a href="#">Магистральные перевозки<span>›</span></a>
                                 <ul class="sub-menu1">
                                     <h4>Магистральные перевозки</h4>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGX</a>
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGX<span>›</span></a>
                                         <ul class="sub-menu-3">
                                             <h4>TGX</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
@@ -40,16 +40,16 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGS</a>
-                                        <ul class="sub-menu-3 sub-menu-31">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGS<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGS</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
                                             <li class="menu-sub"><a href="#">Технические разработки</a></li>
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul></li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">MAN XLION</a>
-                                        <ul class="sub-menu-3 sub-menu-31 to-top2">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">MAN XLION<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>MAN XLION</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -60,10 +60,10 @@
                                     <li class="menu-sub" data-id="level3"><a href="#">Рейтинг TUV</a></li>
                                 </ul>
                             </li>
-                            <li class="sub-menu3" data-id="level2"><a href="#">Строительство</a>
-                                <ul class="sub-menu1 sub-stroy">
+                            <li style="position: static" class="menu-sub" data-id="level2"><a href="#">Строительство<span>›</span></a>
+                                <ul class="sub-menu1">
                                     <h4>Строительство</h4>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGX</a>
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGX<span>›</span></a>
                                         <ul class="sub-menu-3">
                                             <h4>TGX</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
@@ -73,8 +73,8 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGS</a>
-                                        <ul class="sub-menu-3 bus-to-top">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGS<span>›</span></a>
+                                        <ul class="sub-menu-3 ">
                                             <h4>TGS</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -82,8 +82,8 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGM</a>
-                                        <ul class="sub-menu-3 sub-to-top1 to-top2">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGM<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGM</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -91,8 +91,8 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGL</a>
-                                        <ul class="sub-menu-3 sub-to-top2 to-top2">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGL<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGL</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -100,8 +100,8 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGS WW</a>
-                                        <ul class="sub-menu-3 sub-to-top3 to-top2">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGS WW<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGS WW</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -110,11 +110,11 @@
                                         </ul>
                                     </li>
                                 </ul>
-                            <li class="sub-menu3" data-id="level2"><a href="#">Разовые перевозки</a>
-                                <ul class="sub-menu1 sub-perevoz">
+                            <li style="position: static" class="sub-menu1" data-id="level2"><a href="#">Разовые перевозки<span>›</span></a>
+                                <ul class="sub-menu1">
                                     <h4>Разовые перевозки</h4>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGS</a>
-                                        <ul class="sub-menu-3 sub-to-top1">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGS<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGS</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -122,8 +122,8 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGM</a>
-                                        <ul class="sub-menu-3 sub-to-top1">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGM<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGM</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -131,8 +131,8 @@
                                             <li class="menu-sub"><a href="#">Финансирование</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">TGL</a>
-                                        <ul class="sub-menu-3 sub-to-top1">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">TGL<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>TGL</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -143,12 +143,12 @@
                                     <li class="menu-sub"><a href="#">Лесовозные</a></li>
                                     <li class="menu-sub"><a href="#">Коммунальная техника MAN</a></li>
                                 </ul></li>
-                            <li class="sub-menu3" data-id="level2"><a href="#">Технологии и разработки</a>
-                                <ul class="sub-menu1 sub-technology">
+                            <li style="position: static" class="menu-sub" data-id="level2"><a href="#">Технологии и разработки<span>›</span></a>
+                                <ul class="sub-menu-3">
                                     <h4>Технологии и разработки</h4>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">Системы безопасности и помощи водителю</a>
-                                        <ul class="sub-menu-3 sub-to-top1 sub-menu-4">
-                                            <h4>Системы безопасности и помощи водителю</h4>
+                                    <li style="position: static" class="sub-menu1" data-id="level3"><a href="#">Системы безопасности и помощи водителю<span>›</span></a>
+                                        <ul class="sub-menu-3 sub-menu-4">
+                                            <h4>Системы безопасности</h4>
                                             <li class="menu-sub"><a href="#">MAN BrakeMatic®</a></li>
                                             <li class="menu-sub"><a href="#">Адаптивный круиз-контроль</a></li>
                                             <li class="menu-sub"><a href="#">Электронная система курсовой устойчивости</a></li>
@@ -158,31 +158,31 @@
                                             <li class="menu-sub"><a href="#">Система слежения за дорожной разметкой</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">Системы повышения эффективности</a>
-                                        <ul class="sub-menu-3 sub-to-top2 sub-menu-4">
+                                    <li style="position: static" class="menu-sub1" data-id="level3"><a href="#">Системы повышения эффективности<span>›</span></a>
+                                        <ul class="sub-menu-3 sub-menu-4">
                                             <h4>Системы повышения эффективности</h4>
                                             <li class="menu-sub"><a href="#">Темпомат с поддержкой GPS</a></li>
                                             <li class="menu-sub"><a href="#">MAN TipMatic®</a></li>
                                             <li class="menu-sub"><a href="#">MAN HydroDrive®</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">Кабины</a>
-                                        <ul class="sub-menu-3 sub-to-top3 sub-menu-4">
+                                    <li style="position: static" class="menu-sub1" data-id="level3"><a href="#">Кабины<span>›</span></a>
+                                        <ul class="sub-menu-3 sub-menu-4">
                                             <h4>Кабины</h4>
                                             <div class="flex">
-                                                <li style="width: 150px !important;" class="menu-sub"><a href="#">Обзор</a></li>
+                                                <li style="width: 150px;" class="menu-sub"><a href="#">Обзор</a></li>
                                                 <li class="menu-sub"><a href="#">Кабина XLX</a></li>
                                             </div>
                                             <div class="flex">
-                                                <li style="width: 150px !important;" class="menu-sub"><a href="#">Кабина LX</a></li>
+                                                <li style="width: 150px;" class="menu-sub"><a href="#">Кабина LX</a></li>
                                                 <li class="menu-sub"><a href="#">Кабина M</a></li>
                                             </div>
                                             <div class="flex">
-                                                <li style="width: 150px !important;" class="menu-sub"><a href="#">Кабина C</a></li>
+                                                <li style="width: 150px;" class="menu-sub"><a href="#">Кабина C</a></li>
                                                 <li class="menu-sub"><a href="#">Кабина XXL</a></li>
                                             </div>
                                             <div class="flex">
-                                                <li style="width: 150px !important;" class="menu-sub"><a href="#">Кабина XL</a></li>
+                                                <li style="width: 150px;" class="menu-sub"><a href="#">Кабина XL</a></li>
                                                 <li class="menu-sub"><a href="#">Кабина L</a></li>
                                             </div>
                                             <li class="menu-sub"><a href="#">Кабина с двумя рядами сидений</a></li>
@@ -196,11 +196,11 @@
                     <div class="sub-menu-container bus-dropdown">
                         <ul class="sub-menu">
                             <h4>Модельный ряд</h4>
-                            <li class="sub-menu3"  data-id="level2"><a href="#">Туристические</a>
-                                <ul class="sub-menu1">
+                            <li style="position: static" class="sub-menu3"  data-id="level2"><a href="#">Туристические<span>›</span></a>
+                                <ul class="sub-menu-5">
                                     <h4>Туристические</h4>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">Neoplan</a>
-                                        <ul class="sub-menu-3">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">Neoplan<span>›</span></a>
+                                        <ul class="sub-menu-5">
                                             <h4>Neoplan</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Технические разработки</a></li>
@@ -209,8 +209,8 @@
                                             <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">MAN Lion's Coach</a>
-                                        <ul class="sub-menu-3 sub-menu-31">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">MAN Lion's Coach<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>MAN Lion's Coach</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Технические разработки</a></li>
@@ -219,11 +219,11 @@
                                             <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
                                         </ul></li>
                                 </ul></li>
-                            <li class="sub-menu3" data-id="level2"><a href="#">Междугородние</a>
-                                <ul class="sub-menu1 bus-to-top">
+                            <li style="position: static" class="sub-menu3" data-id="level2"><a href="#">Междугородние<span>›</span></a>
+                                <ul class="sub-menu-5">
                                     <h4>Междугородние</h4>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">Neoplan</a>
-                                        <ul class="sub-menu-3 1">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">Neoplan<span>›</span></a>
+                                        <ul class="sub-menu-3 ">
                                             <h4>Neoplan</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Технические разработки</a></li>
@@ -232,8 +232,8 @@
                                             <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-sub sub-menu3" data-id="level3"><a href="#">Man Lion's Intercity</a>
-                                        <ul class="sub-menu-3 1">
+                                    <li style="position: static" class="menu-sub" data-id="level3"><a href="#">Man Lion's Intercity<span>›</span></a>
+                                        <ul class="sub-menu-3">
                                             <h4>Man Lion's Intercity</h4>
                                             <li class="menu-sub"><a href="#">Обзор</a></li>
                                             <li class="menu-sub"><a href="#">Технические разработки</a></li>
